--- a/lab2/lab2.ipynb
+++ b/lab2/lab2.ipynb
@@ -76,7 +76,7 @@
     "\n",
     "scatter(data.size, [data.dot_mean data.multi_mean],\n",
     "    title = \"size of matrices and time of operations\",\n",
-    "    xlab = \"vector length\", ylab = \"time\",\n",
+    "    xlab = \"vector length\", ylab = \"time [s]\",\n",
     "    label = [\"dot product\" \"square matrix * vector\"],\n",
     "    legend = :topleft,\n",
     "    yerr = [data.dot_std data.multi_std],\n",
