--- a/lab4/lab4.ipynb
+++ b/lab4/lab4.ipynb
@@ -2,19 +2,297 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m270×3 DataFrame\u001b[0m\n",
+      "\u001b[1m Row \u001b[0m│\u001b[1m operation \u001b[0m\u001b[1m length \u001b[0m\u001b[1m time      \u001b[0m\n",
+      "\u001b[1m     \u001b[0m│\u001b[90m Any       \u001b[0m\u001b[90m Any    \u001b[0m\u001b[90m Any       \u001b[0m\n",
+      "─────┼──────────────────────────────\n",
+      "   1 │ naive      2       5.0e-7\n",
+      "   2 │ better     2       4.0e-7\n",
+      "   3 │ BLAS       2       5.0e-7\n",
+      "   4 │ naive      2       2.0e-7\n",
+      "   5 │ better     2       2.0e-7\n",
+      "   6 │ BLAS       2       5.0e-7\n",
+      "   7 │ naive      2       1.0e-7\n",
+      "   8 │ better     2       1.0e-7\n",
+      "   9 │ BLAS       2       2.0e-7\n",
+      "  10 │ naive      2       2.0e-7\n",
+      "  11 │ better     2       2.0e-7\n",
+      "  12 │ BLAS       2       2.0e-7\n",
+      "  13 │ naive      2       2.0e-7\n",
+      "  14 │ better     2       3.0e-7\n",
+      "  15 │ BLAS       2       2.0e-7\n",
+      "  16 │ naive      2       2.0e-7\n",
+      "  17 │ better     2       2.0e-7\n",
+      "  18 │ BLAS       2       3.0e-7\n",
+      "  19 │ naive      2       2.0e-7\n",
+      "  20 │ better     2       2.0e-7\n",
+      "  21 │ BLAS       2       2.0e-7\n",
+      "  22 │ naive      2       2.0e-7\n",
+      "  23 │ better     2       2.0e-7\n",
+      "  24 │ BLAS       2       1.0e-7\n",
+      "  25 │ naive      2       1.0e-7\n",
+      "  26 │ better     2       2.0e-7\n",
+      "  27 │ BLAS       2       1.0e-7\n",
+      "  28 │ naive      2       1.0e-7\n",
+      "  29 │ better     2       2.0e-7\n",
+      "  30 │ BLAS       2       1.0e-7\n",
+      "  31 │ naive      4       7.0e-7\n",
+      "  32 │ better     4       8.8e-6\n",
+      "  33 │ BLAS       4       3.84e-5\n",
+      "  34 │ naive      4       4.0e-7\n",
+      "  35 │ better     4       3.0e-7\n",
+      "  36 │ BLAS       4       5.0e-7\n",
+      "  37 │ naive      4       2.0e-7\n",
+      "  38 │ better     4       2.0e-7\n",
+      "  39 │ BLAS       4       2.0e-7\n",
+      "  40 │ naive      4       4.0e-7\n",
+      "  41 │ better     4       3.0e-7\n",
+      "  42 │ BLAS       4       4.0e-7\n",
+      "  43 │ naive      4       3.0e-7\n",
+      "  44 │ better     4       3.0e-7\n",
+      "  45 │ BLAS       4       3.0e-7\n",
+      "  46 │ naive      4       3.0e-7\n",
+      "  47 │ better     4       3.0e-7\n",
+      "  48 │ BLAS       4       4.0e-7\n",
+      "  49 │ naive      4       3.0e-7\n",
+      "  50 │ better     4       4.0e-7\n",
+      "  51 │ BLAS       4       4.0e-7\n",
+      "  52 │ naive      4       3.0e-7\n",
+      "  53 │ better     4       3.0e-7\n",
+      "  54 │ BLAS       4       4.0e-7\n",
+      "  55 │ naive      4       3.0e-7\n",
+      "  56 │ better     4       3.0e-7\n",
+      "  57 │ BLAS       4       5.0e-7\n",
+      "  58 │ naive      4       3.0e-7\n",
+      "  59 │ better     4       3.0e-7\n",
+      "  60 │ BLAS       4       5.0e-7\n",
+      "  61 │ naive      8       1.2e-6\n",
+      "  62 │ better     8       1.4e-6\n",
+      "  63 │ BLAS       8       1.8e-6\n",
+      "  64 │ naive      8       1.1e-6\n",
+      "  65 │ better     8       1.1e-6\n",
+      "  66 │ BLAS       8       5.0e-7\n",
+      "  67 │ naive      8       1.2e-6\n",
+      "  68 │ better     8       1.2e-6\n",
+      "  69 │ BLAS       8       6.0e-7\n",
+      "  70 │ naive      8       1.0e-6\n",
+      "  71 │ better     8       9.0e-7\n",
+      "  72 │ BLAS       8       4.0e-7\n",
+      "  73 │ naive      8       1.1e-6\n",
+      "  74 │ better     8       1.1e-6\n",
+      "  75 │ BLAS       8       4.0e-7\n",
+      "  76 │ naive      8       1.0e-6\n",
+      "  77 │ better     8       9.0e-7\n",
+      "  78 │ BLAS       8       4.0e-7\n",
+      "  79 │ naive      8       9.0e-7\n",
+      "  80 │ better     8       9.0e-7\n",
+      "  81 │ BLAS       8       3.0e-7\n",
+      "  82 │ naive      8       1.1e-6\n",
+      "  83 │ better     8       9.0e-7\n",
+      "  84 │ BLAS       8       3.0e-7\n",
+      "  85 │ naive      8       1.1e-6\n",
+      "  86 │ better     8       1.0e-6\n",
+      "  87 │ BLAS       8       4.0e-7\n",
+      "  88 │ naive      8       9.0e-7\n",
+      "  89 │ better     8       9.0e-7\n",
+      "  90 │ BLAS       8       4.0e-7\n",
+      "  91 │ naive      16      8.8e-6\n",
+      "  92 │ better     16      6.5e-6\n",
+      "  93 │ BLAS       16      1.8e-6\n",
+      "  94 │ naive      16      8.8e-6\n",
+      "  95 │ better     16      6.4e-6\n",
+      "  96 │ BLAS       16      1.4e-6\n",
+      "  97 │ naive      16      8.7e-6\n",
+      "  98 │ better     16      6.4e-6\n",
+      "  99 │ BLAS       16      1.4e-6\n",
+      " 100 │ naive      16      9.3e-6\n",
+      " 101 │ better     16      6.7e-6\n",
+      " 102 │ BLAS       16      1.5e-6\n",
+      " 103 │ naive      16      9.2e-6\n",
+      " 104 │ better     16      6.9e-6\n",
+      " 105 │ BLAS       16      2.1e-6\n",
+      " 106 │ naive      16      8.4e-6\n",
+      " 107 │ better     16      6.2e-6\n",
+      " 108 │ BLAS       16      1.0e-6\n",
+      " 109 │ naive      16      8.6e-6\n",
+      " 110 │ better     16      6.4e-6\n",
+      " 111 │ BLAS       16      1.0e-6\n",
+      " 112 │ naive      16      8.6e-6\n",
+      " 113 │ better     16      6.4e-6\n",
+      " 114 │ BLAS       16      9.0e-7\n",
+      " 115 │ naive      16      8.3e-6\n",
+      " 116 │ better     16      6.5e-6\n",
+      " 117 │ BLAS       16      1.1e-6\n",
+      " 118 │ naive      16      8.3e-6\n",
+      " 119 │ better     16      6.4e-6\n",
+      " 120 │ BLAS       16      1.1e-6\n",
+      " 121 │ naive      32      7.85e-5\n",
+      " 122 │ better     32      4.99e-5\n",
+      " 123 │ BLAS       32      1.49e-5\n",
+      " 124 │ naive      32      6.85e-5\n",
+      " 125 │ better     32      4.66e-5\n",
+      " 126 │ BLAS       32      4.9e-6\n",
+      " 127 │ naive      32      7.71e-5\n",
+      " 128 │ better     32      4.62e-5\n",
+      " 129 │ BLAS       32      4.9e-6\n",
+      " 130 │ naive      32      8.19e-5\n",
+      " 131 │ better     32      4.72e-5\n",
+      " 132 │ BLAS       32      4.7e-6\n",
+      " 133 │ naive      32      6.82e-5\n",
+      " 134 │ better     32      4.78e-5\n",
+      " 135 │ BLAS       32      4.4e-6\n",
+      " 136 │ naive      32      6.78e-5\n",
+      " 137 │ better     32      4.61e-5\n",
+      " 138 │ BLAS       32      4.4e-6\n",
+      " 139 │ naive      32      7.72e-5\n",
+      " 140 │ better     32      4.59e-5\n",
+      " 141 │ BLAS       32      4.1e-6\n",
+      " 142 │ naive      32      7.73e-5\n",
+      " 143 │ better     32      4.63e-5\n",
+      " 144 │ BLAS       32      4.4e-6\n",
+      " 145 │ naive      32      6.77e-5\n",
+      " 146 │ better     32      4.58e-5\n",
+      " 147 │ BLAS       32      4.3e-6\n",
+      " 148 │ naive      32      7.73e-5\n",
+      " 149 │ better     32      4.62e-5\n",
+      " 150 │ BLAS       32      4.4e-6\n",
+      " 151 │ naive      64      0.0006712\n",
+      " 152 │ better     64      0.0003877\n",
+      " 153 │ BLAS       64      4.74e-5\n",
+      " 154 │ naive      64      0.0006693\n",
+      " 155 │ better     64      0.0003938\n",
+      " 156 │ BLAS       64      3.32e-5\n",
+      " 157 │ naive      64      0.000674\n",
+      " 158 │ better     64      0.0003895\n",
+      " 159 │ BLAS       64      3.26e-5\n",
+      " 160 │ naive      64      0.000676\n",
+      " 161 │ better     64      0.0013813\n",
+      " 162 │ BLAS       64      5.27e-5\n",
+      " 163 │ naive      64      0.0006904\n",
+      " 164 │ better     64      0.000416\n",
+      " 165 │ BLAS       64      5.94e-5\n",
+      " 166 │ naive      64      0.00069\n",
+      " 167 │ better     64      0.0004064\n",
+      " 168 │ BLAS       64      3.51e-5\n",
+      " 169 │ naive      64      0.0006868\n",
+      " 170 │ better     64      0.0004111\n",
+      " 171 │ BLAS       64      4.48e-5\n",
+      " 172 │ naive      64      0.0006895\n",
+      " 173 │ better     64      0.000421\n",
+      " 174 │ BLAS       64      4.24e-5\n",
+      " 175 │ naive      64      0.0006868\n",
+      " 176 │ better     64      0.0004125\n",
+      " 177 │ BLAS       64      4.5e-5\n",
+      " 178 │ naive      64      0.0006891\n",
+      " 179 │ better     64      0.0004012\n",
+      " 180 │ BLAS       64      4.66e-5\n",
+      " 181 │ naive      128     0.0065587\n",
+      " 182 │ better     128     0.0030534\n",
+      " 183 │ BLAS       128     0.0002787\n",
+      " 184 │ naive      128     0.0068359\n",
+      " 185 │ better     128     0.0029316\n",
+      " 186 │ BLAS       128     0.0001968\n",
+      " 187 │ naive      128     0.0064642\n",
+      " 188 │ better     128     0.0030957\n",
+      " 189 │ BLAS       128     0.0002362\n",
+      " 190 │ naive      128     0.0062324\n",
+      " 191 │ better     128     0.0032685\n",
+      " 192 │ BLAS       128     0.0002022\n",
+      " 193 │ naive      128     0.005843\n",
+      " 194 │ better     128     0.0035461\n",
+      " 195 │ BLAS       128     0.0002067\n",
+      " 196 │ naive      128     0.0058209\n",
+      " 197 │ better     128     0.0036486\n",
+      " 198 │ BLAS       128     0.0002672\n",
+      " 199 │ naive      128     0.0059026\n",
+      " 200 │ better     128     0.0028284\n",
+      " 201 │ BLAS       128     0.0001818\n",
+      " 202 │ naive      128     0.0068919\n",
+      " 203 │ better     128     0.0029703\n",
+      " 204 │ BLAS       128     0.000195\n",
+      " 205 │ naive      128     0.0066084\n",
+      " 206 │ better     128     0.0029331\n",
+      " 207 │ BLAS       128     0.0002162\n",
+      " 208 │ naive      128     0.0064287\n",
+      " 209 │ better     128     0.0029464\n",
+      " 210 │ BLAS       128     0.0001763\n",
+      " 211 │ naive      256     0.0549454\n",
+      " 212 │ better     256     0.0255775\n",
+      " 213 │ BLAS       256     0.0007161\n",
+      " 214 │ naive      256     0.056347\n",
+      " 215 │ better     256     0.0240775\n",
+      " 216 │ BLAS       256     0.0007134\n",
+      " 217 │ naive      256     0.0564057\n",
+      " 218 │ better     256     0.0249593\n",
+      " 219 │ BLAS       256     0.0007032\n",
+      " 220 │ naive      256     0.0543792\n",
+      " 221 │ better     256     0.0249525\n",
+      " 222 │ BLAS       256     0.0017199\n",
+      " 223 │ naive      256     0.058938\n",
+      " 224 │ better     256     0.0253\n",
+      " 225 │ BLAS       256     0.0007184\n",
+      " 226 │ naive      256     0.0558331\n",
+      " 227 │ better     256     0.0245639\n",
+      " 228 │ BLAS       256     0.0008156\n",
+      " 229 │ naive      256     0.0601951\n",
+      " 230 │ better     256     0.0254609\n",
+      " 231 │ BLAS       256     0.0019087\n",
+      " 232 │ naive      256     0.061035\n",
+      " 233 │ better     256     0.024562\n",
+      " 234 │ BLAS       256     0.0006034\n",
+      " 235 │ naive      256     0.0551163\n",
+      " 236 │ better     256     0.0254635\n",
+      " 237 │ BLAS       256     0.0006925\n",
+      " 238 │ naive      256     0.0556737\n",
+      " 239 │ better     256     0.0245673\n",
+      " 240 │ BLAS       256     0.0007095\n",
+      " 241 │ naive      512     0.530447\n",
+      " 242 │ better     512     0.204302\n",
+      " 243 │ BLAS       512     0.0053793\n",
+      " 244 │ naive      512     0.539971\n",
+      " 245 │ better     512     0.22345\n",
+      " 246 │ BLAS       512     0.0056467\n",
+      " 247 │ naive      512     0.557106\n",
+      " 248 │ better     512     0.202131\n",
+      " 249 │ BLAS       512     0.0042282\n",
+      " 250 │ naive      512     0.511908\n",
+      " 251 │ better     512     0.200531\n",
+      " 252 │ BLAS       512     0.0036467\n",
+      " 253 │ naive      512     0.519962\n",
+      " 254 │ better     512     0.198883\n",
+      " 255 │ BLAS       512     0.0041934\n",
+      " 256 │ naive      512     0.528083\n",
+      " 257 │ better     512     0.197121\n",
+      " 258 │ BLAS       512     0.0207528\n",
+      " 259 │ naive      512     0.502191\n",
+      " 260 │ better     512     0.199889\n",
+      " 261 │ BLAS       512     0.0030341\n",
+      " 262 │ naive      512     0.508455\n",
+      " 263 │ better     512     0.197327\n",
+      " 264 │ BLAS       512     0.0033764\n",
+      " 265 │ naive      512     0.506109\n",
+      " 266 │ better     512     0.193771\n",
+      " 267 │ BLAS       512     0.0045989\n",
+      " 268 │ naive      512     0.501012\n",
+      " 269 │ better     512     0.193688\n",
+      " 270 │ BLAS       512     0.0046517"
+     ]
+    }
+   ],
    "source": [
     "using Plots\n",
     "using Random\n",
     "using DataFrames\n",
     "using Statistics\n",
     "\n",
-    "println(\"a\")\n",
-    "\n",
     "function naive_multiplication(A,B)\n",
-    "    println(\"a\")\n",
     "    C = zeros(Float64, size(A,1), size(B,2))\n",
     "    for i=1:size(A,1)\n",
     "        for j=1:size(B,2)\n",
@@ -26,10 +304,7 @@
     "    return C\n",
     "end\n",
     "\n",
-    "println(\"a\")\n",
     "function better_multiplication(A,B)\n",
-    "    \n",
-    "    println(\"a\")\n",
     "    C = zeros(Float64, size(A,1), size(B,2))\n",
     "    for j=1:size(B,2)\n",
     "        for k=1:size(A,2)\n",
@@ -41,36 +316,26 @@
     "    return C\n",
     "end\n",
     "\n",
-    "println(\"a\")\n",
     "operation = []\n",
     "length = []\n",
     "time = []\n",
     "\n",
-    "println(-1)\n",
-    "\n",
     "tmp1 = @elapsed naive_multiplication(rand(2, 2), rand(2, 2))\n",
-    "\n",
-    "println(-2)\n",
     "tmp2 = @elapsed better_multiplication(rand(2, 2), rand(2, 2))\n",
-    "\n",
-    "println(-3)\n",
-    "\n",
     "tmp3 = @elapsed rand(2, 2) * rand(2, 2)\n",
     "\n",
-    "println(-4)\n",
     "for i in 1:10\n",
-    "    println(i)\n",
     "    for j in 1:10\n",
-    "        A = rand(2^i, 2^i)\n",
-    "        B = rand(2^i, 2^i)\n",
+    "        A = rand(50*i, 50*i)\n",
+    "        B = rand(50*i, 50*i)\n",
     "        push!(operation, \"naive\")\n",
-    "        push!(length, 2^i)\n",
+    "        push!(length, 50*i)\n",
     "        push!(time, @elapsed naive_multiplication(A, B))\n",
     "        push!(operation, \"better\")\n",
-    "        push!(length, 2^i)\n",
+    "        push!(length, 50*i)\n",
     "        push!(time, @elapsed better_multiplication(A, B))\n",
     "        push!(operation, \"BLAS\")\n",
-    "        push!(length, 2^i)\n",
+    "        push!(length, 50*i)\n",
     "        push!(time, @elapsed A*B)\n",
     "    end\n",
     "end\n",
@@ -103,7 +368,10 @@
    "name": "julia-1.7"
   },
   "language_info": {
-   "name": "julia"
+   "file_extension": ".jl",
+   "mimetype": "application/julia",
+   "name": "julia",
+   "version": "1.7.2"
   },
   "orig_nbformat": 4
  },
