--- a/lab11/lab11.ipynb
+++ b/lab11/lab11.ipynb
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +316,7 @@
        " 4"
       ]
      },
-     "execution_count": 156,
+     "execution_count": 173,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -349,11 +349,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 198,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5×5 Matrix{Float64}:\n",
+       "  2.14827       -0.038274      0.0347981      0.0335157      1.06196\n",
+       "  4.93414e-216  -0.550027      0.0257339     -0.322879       0.332199\n",
+       " -4.18304e-216  -0.185539     -0.414536       0.0144229      0.022984\n",
+       " -5.25033e-270   2.15996e-54   2.88818e-55    0.332641      -0.018246\n",
+       " -5.0e-324      -1.7875e-203  -1.53652e-203   2.00738e-150   0.119078"
+      ]
+     },
+     "execution_count": 198,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#zadanie 3\n"
+    "#zadanie 3\n",
+    "\n",
+    "function eigenvalues(A, n)\n",
+    "    for k in 1:n\n",
+    "        AF = qr(A)\n",
+    "        A = Transpose(AF.Q)*A*AF.Q\n",
+    "    end\n",
+    "    return A\n",
+    "end\n",
+    "\n",
+    "eigenvalues(rand(5,5), 333)"
    ]
   }
  ],
