--- a/lab11/lab11.ipynb
+++ b/lab11/lab11.ipynb
@@ -370,6 +370,7 @@
    ],
    "source": [
     "#zadanie 3\n",
+    "#source: http://pi.math.cornell.edu/~web6140/TopTenAlgorithms/QRalgorithm.html\n",
     "\n",
     "function eigenvalues(A, n)\n",
     "    for k in 1:n\n",
